--- a/app/_assets/scss/organisms/_footer.scss
+++ b/app/_assets/scss/organisms/_footer.scss
@@ -16,6 +16,7 @@ footer {
     width: 100%;
     height: 32px;
     padding: 16px 0;
+        line-height: $base-line-height;
     p {
         margin: 0;
     }
