--- a/app/_assets/scss/utilities/_grid.scss
+++ b/app/_assets/scss/utilities/_grid.scss
@@ -17,15 +17,16 @@ section {
     margin: 0;
 }
 
-.box-container{
-   padding:8px;
-   width: 100%;
-   height: 256px;
-   display: block;
+.box-container {
+    padding: 8px;
+    width: 100%;
+    height: 256px;
+    display: block;
 }
 
-.section#jumbo{
-    border:0;
+.section#jumbo {
+    border: 0;
+
     // padding-top: 48px;
 }
 
@@ -34,34 +35,35 @@ section {
     margin: 0;
 }
 
-.col-md-4, .col-md-6, .col-xs-6{
-    margin:0;
-    padding:0;
+.col-md-4, .col-md-6, .col-xs-6 {
+    margin: 0;
+    padding: 0;
 }
 
-.col-md-12{
-    margin:0;
-    padding:0;
-}
-
-.outer-container {
-    display: table;
-    width: 100%;
-    height: 100vh;
-    .inner-container {
-        display: table-cell;
-        vertical-align: middle;
-
-        .text-container {
-            padding:32px;
-            margin-left: auto;
-            margin-right: auto;
-        }
-    }
+.col-md-12 {
+    margin: 0;
+    padding: 0;
 }
 
 //>2500px
 @media (min-width: $break-huge) {
+    .outer-container {
+        display: table;
+        width: 100%;
+        height: 100vh;
+
+        .inner-container {
+            display: table-cell;
+            vertical-align: middle;
+
+            .text-container {
+                padding: 32px;
+                margin-left: auto;
+                margin-right: auto;
+            }
+        }
+    }
+
     .section {
         width: 100%;
         border-bottom: solid 2px $vb-grey;
@@ -71,7 +73,7 @@ section {
         display: inline-block;
 
         .text-container {
-            padding:32px 0;
+            padding: 32px 0;
             padding-top: 128px;
             padding-bottom: 128px;
         }
@@ -80,6 +82,23 @@ section {
 
 //2500px< & >1200px
 @media (max-width: $break-huge) and (min-width: $break-large) {
+    .outer-container {
+        display: table;
+        width: 100%;
+        height: 100vh;
+
+        .inner-container {
+            display: table-cell;
+            vertical-align: middle;
+
+            .text-container {
+                padding: 32px;
+                margin-left: auto;
+                margin-right: auto;
+            }
+        }
+    }
+
     .section {
         width: 100%;
         border-bottom: solid 2px $vb-grey;
@@ -89,7 +108,7 @@ section {
         max-height: 100%;
 
         .text-container {
-            padding:32px 0;
+            padding: 32px 0;
             padding-top: 128px;
             padding-bottom: 128px;
         }
@@ -98,6 +117,23 @@ section {
 
 //1280px< & >767px
 @media (max-width: $break-large) and (min-width: $break-medium) {
+    .outer-container {
+        display: table;
+        width: 100%;
+        height: 100vh;
+
+        .inner-container {
+            display: table-cell;
+            vertical-align: middle;
+
+            .text-container {
+                padding: 32px;
+                margin-left: auto;
+                margin-right: auto;
+            }
+        }
+    }
+
     .section {
         width: 100%;
         border-bottom: solid 2px $vb-grey;
@@ -105,7 +141,7 @@ section {
         max-height: 100%;
 
         .text-container {
-            padding:32px 0;
+            padding: 32px 0;
             padding-top: 128px;
             padding-bottom: 128px;
         }
@@ -114,6 +150,23 @@ section {
 
 //767px< & >480px
 @media (max-width: $break-medium) and (min-width: $break-small) {
+    .outer-container {
+        display: table;
+        width: 100%;
+        height: 100vh;
+
+        .inner-container {
+            display: table-cell;
+            vertical-align: middle;
+
+            .text-container {
+                padding: 32px;
+                margin-left: auto;
+                margin-right: auto;
+            }
+        }
+    }
+
     .section {
         width: 100%;
         border-bottom: solid 2px $vb-grey;
@@ -121,7 +174,7 @@ section {
         max-height: 100%;
 
         .text-container {
-            padding:32px;
+            padding: 32px;
             padding-top: 128px;
             padding-bottom: 128px;
         }
@@ -130,22 +183,54 @@ section {
 
 //480px< & >320px
 @media (max-width: $break-small) and (min-width: $break-tiny) {
+    .outer-container {
+        display: table;
+        width: 100%;
+        height: 100vh;
+
+        .inner-container {
+            display: table-cell;
+            vertical-align: middle;
+
+            .text-container {
+                margin-left: auto;
+                margin-right: auto;
+            }
+        }
+    }
+
     .section {
         min-height: 100vh;
         max-height: 100%;
         width: 100%;
         border-bottom: solid 2px $vb-grey;
+        padding: 0;
+        margin-right: -32px;
 
         .text-container {
-            padding:32px;
-            padding-top: 64px;
-            padding-bottom: 64px;
+            padding: 0;
         }
     }
 }
 
 //320px<
 @media (max-width: $break-tiny) {
+    .outer-container {
+        display: table;
+        width: 100%;
+        height: 100vh;
+
+        .inner-container {
+            display: table-cell;
+            vertical-align: middle;
+
+            .text-container {
+                margin-left: auto;
+                margin-right: auto;
+            }
+        }
+    }
+
     .section {
         width: 100%;
         border-bottom: solid 2px $vb-grey;
@@ -153,7 +238,6 @@ section {
         max-height: 100%;
 
         .text-container {
-            padding:32px;
             padding-top: 64px;
             padding-bottom: 64px;
         }
